kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eap
  labels:
    app.kubernetes.io/part-of: enterprise-ai-platform
